@@ -1,6 +1,7 @@
 Revision history for Perl extension Catalyst::Plugin::Static::Simple
 
         - Fix config key (mst)
+        - Fix docs to not include plugins in call to ->setup() (t0m)
 
 0.21    2009-03-29 20:31:49
 		- Documentation improvements (jester)
